[package]
name = "v2-to-unified"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "1.11"
serde_yaml = "0.8"
clap = { version = "3.0.13", features = ["derive"] }
bson = "2"
anyhow = "1"